2015-07-09  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: moved optimization/sanity check func to oxli
   * scripts/normalize-by-median.py,oxli/build_graph.py: added
   optimization/sanity checking via oxli estimation funcs
   * tests/test_normalize_by_median.py: updated tests to cover estimation funcs

2015-07-08  Luiz Irber  <khmer@luizirber.org>

   * lib/{counting,hashbits,hashtable,labelhash,subset}.cc: print hexadecimal
   representation of the signature read from the file.

2015-07-06  Luiz Irber  <khmer@luizirber.org>

   * sandbox/collect-reads.py: Set a default value for coverage based
   on the docstring.
   * sandbox/count-kmers-single.py, tests/test_{functions,script_arguments}.py:
   Replace xrange and cStringIO (not Python 3 compatible).
   * lib/*.{hh,cc}, oxli/functions.py, tests/*.py: make format.

2015-07-05  Jaob Fenton  <bocajnotnef@gmail.com>

   * doc/whats-new-2.0.rst: added in normalize-by-median.py broken paired 
   updates

2015-07-05  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * Makefile: fix cppcheck invocation
   * khmer/_khmer.cc: switch to prefix increment for non-primitive objects,
   use a C++ cast, adjust scope
   * lib/hashtable.{hh,cc}: make copy constructor no-op explicit. adjust scope
   * lib/{ht-diff,test-HashTables,test-Parser}.cc: remove unused test code
   * lib/labelhash.cc,hllcounter.cc: astyle reformatting
   * lib/read_parsers.hh: more explicit constructors

2015-07-05  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * sandbox/{collect-variants,optimal_args_hashbits,sweep-files}.py:
   update API usage

2015-07-05  Titus Brown  <titus@idyll.org>

   * sandbox/{count-kmers.py,count-kmers-single.py}: added scripts to output
   k-mer counts.
   * tests/test_sandbox_scripts.py: added tests for count-kmers.py and
   count-kmers-single.py.
   * sandbox/README.rst: added count-kmers.py and count-kmers-single.py to
   sandbox/README.

2015-07-05  Kevin Murray  <spam@kdmurray.id.au>
