@@ -93,9 +93,11 @@ def do_sanity_checking(args, desired_max_fp):
             if res.fp_rate > desired_max_fp:
                 print("""
 *** ERROR: The given restrictions yield an estimate false positive rate of {0},
-*** which is above the recommended false positive ceiling of {1}!
-*** Aborting!""".format(res.fp_rate, desired_max_fp), file=sys.stderr)
-                sys.exit(1)
+*** which is above the recommended false positive ceiling of {1}!"""
+.format(res.fp_rate, desired_max_fp), file=sys.stderr)
+                if not args.force:
+                    print("*** Aborting...!", file=sys.stderr)
+                    sys.exit(1)
         else:
             res = estimate_optimal_with_N_and_f(args.unique_kmers,
                                                 desired_max_fp)
